--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <div class="head box">
+      <div class="head">
         <nav class="nav">
           <a href="" class="logo-link">
             <span class="web"> Web </span> Studio</a
@@ -31,55 +31,67 @@
             <li class="item"><a href="" class="links">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="nav-links list">
-          <li class="item">
+        <ul class="nav-links list ">
+          <li class="itema how">
             <a href="info@devstudio.com" class="links emeil"
-              >info@devstudio.com</a
+              >
+              <svg class="decore">
+                <use href="./img/sprite.svg#icon-email"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
-          <li class="itemsi">
-            <a href="+380961111111" class="links phon"> +38 096 111 11 11</a>
+          <li class="itemsi how">
+            <a href="+380961111111" class="links phon">
+              <svg class="decor">
+                <use href="./img/sprite.svg#icon-smartphone"></use>
+              </svg> +38 096 111 11 11</a>
           </li>
         </ul>
       </div>
     </header>
-
-    <section class="abo">
-      <h2 class="tit">эффективные решения <br />для вашего бизнеса</h2>
-      <a href="" class="buti knop">Заказать услугу</a>
+<main>
+  
+    <section >
+      <div class="gero">
+      <div class="abo">
+      <h1 class="tit">эффективные решения <br />для вашего бизнеса</h1>
+       <a href="" class="buti knop">Заказать услугу</a></div></div>
+      <!-- <img src="../img/Head.png" alt=""> -->
     </section>
 
-    <section class="box">
+    <section class="">
       <div class="container">
         <!-- <h2 class="title garant">Мы гарантируем</h2> -->
         <ul class="line-blok">
           <li class="doit">
-            <img class="pic" src="./img/antenna1.svg" alt="антена" />
-            <h2 class="title">ВНИМАНИЕ К ДЕТАЛЯМ</h2>
+            <div class="pic ant"></div>
+            <h3 class="title vel left">Внимание к деталям</h3>
             <p class="txt">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li class="doit">
-            <img class="pic" src="./img/clock1.svg" alt="часы" />
-            <h2 class="title">ПУНКТУАЛЬНОСТЬ</h2>
+           <div class="pic clock"></div>
+            <h3 class="title vel left">Пунктуальность</h3>
             <p class="txt">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li class="doit">
-            <img class="pic" src="./img/Vector.svg" alt="компютер" />
-            <h2 class="title">ПЛАНИРОВАНИЕ</h2>
+           <div class="pic vector"></div>
+
+            <h3 class="title vel left">Планирование</h3>
             <p class="txt">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li class="doit">
-            <img class="pic" src="./img/astronaut1.svg" alt="космонавт" />
-            <h2 class="title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ </h2>
+            <div class="pic astro"></div>
+            <h3 class="title vel left no">Современные технологии </h3>
             <p class="txtt">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -89,21 +101,21 @@
       </div>
     </section>
 
-    <section class="container">
-      <div class="box">
+    <section class="container line">
+      <div class="">
         <h2 class="garant">Чем мы занимаемся</h2>
         <ul class="line-blok">
           <li class="doit-now">
-            <img src="./img/nout.jpg" alt="ноутбук" width="370" />
-            <h2 class="transp">Десктопные приложения</h2>
+            <img src="./img/nout.jpg" alt="ноутбук" width="370px" height="294px" />
+            <h3 class="transp">Десктопные приложения</h3>
           </li>
           <li class="doit-now">
-            <img src="./img/phone.jpg" alt="телефон" width="370" />
-            <h2 class="transp">Мобильные приложения</h2>
+            <img src="./img/phone.jpg" alt="телефон" width="370px" height="294px" />
+            <h3 class="transp">Мобильные приложения</h3>
           </li>
           <li class="doit-now">
-            <img src="./img/monic.jpg" alt="монитор" width="370" />
-            <h2 class="transp">Дизайнерские решения</h2>
+            <img src="./img/monic.jpg" alt="монитор" width="370px" height="294px" />
+            <h3 class="transp">Дизайнерские решения</h3>
           </li>
         </ul>
       </div>
@@ -112,8 +124,8 @@
     
     <section class="bk">
     <div class="container">
-        <div class="box col">  
-          <h2 class="title garant">Наша команда</h2>
+        <div class="col">  
+          <h2 class="comand">Наша команда</h2>
           <ul class="line-blok">
             <li class="doit-now card">
               <img src="./img/jon.jpg" alt="фото" width="270" />
@@ -121,28 +133,24 @@
               <p class="titles">Product Designer</p>
               <ul class="nav-lin">
                 <li class="social">
-                  <img src="./img/instagram2.svg" alt="Instagram" /><a
-                    href=""
-                    class="links"
-                  ></a>
+                  <svg class="soc">
+                    <use href="./img/sprite.svg#icon-instagram2"></use>
+                  </svg><a href=""></a>
                 </li>
                 <li class="social">
-                  <img src="./img/twit.svg" alt="Twitter" /><a
-                    href=""
-                    class="links"
-                  ></a>
+                  <svg class="soc">
+                    <use href="./img/sprite.svg#icon-twit"></use>
+                  </svg><a href=""></a>
                 </li>
                 <li class="social">
-                  <img src="./img/facebook1.svg" alt="Faceboock" /><a
-                    href=""
-                    class="links"
-                  ></a>
+                  <svg class="soc">
+                    <use href="./img/sprite.svg#icon-facebook1"></use>
+                  </svg><a href=""></a>
                 </li>
                 <li class="social">
-                  <img src="./img/linkedin1.svg" alt="Linken ID" /><a
-                    href=""
-                    class="links"
-                  ></a>
+                  <svg class="soc">
+                    <use href="./img/sprite.svg#icon-linkedin1"></use>
+                  </svg><a href=""></a>
                 </li>
               </ul>
             </li>
@@ -153,28 +161,24 @@
 
               <ul class="nav-lin">
                 <li class="social">
-                  <img src="./img/instagram2.svg" alt="Instagram" /><a
-                    href=""
-                    class="links"
-                  ></a>
+                  <svg class="soc">
+                    <use href="./img/sprite.svg#icon-instagram2"></use>
+                  </svg><a href=""></a>
                 </li>
                 <li class="social">
-                  <img src="./img/twit.svg" alt="Twitter" /><a
-                    href=""
-                    class="links"
-                  ></a>
+                  <svg class="soc">
+                    <use href="./img/sprite.svg#icon-twit"></use>
+                  </svg><a href=""></a>
                 </li>
                 <li class="social">
-                  <img src="./img/facebook1.svg" alt="Faceboock" /><a
-                    href=""
-                    class="links"
-                  ></a>
+                  <svg class="soc">
+                    <use href="./img/sprite.svg#icon-facebook1"></use>
+                  </svg><a href=""></a>
                 </li>
                 <li class="social">
-                  <img src="./img/linkedin1.svg" alt="Linken ID" /><a
-                    href=""
-                    class="links"
-                  ></a>
+                  <svg class="soc">
+                    <use href="./img/sprite.svg#icon-linkedin1"></use>
+                  </svg><a href=""></a>
                 </li>
               </ul>
             </li>
@@ -185,28 +189,24 @@
 
               <ul class="nav-lin">
                 <li class="social">
-                  <img src="./img/instagram2.svg" alt="Instagram" /><a
-                    href=""
-                    class="links"
-                  ></a>
+                  <svg class="soc">
+                    <use href="./img/sprite.svg#icon-instagram2"></use>
+                  </svg><a href=""></a>
                 </li>
                 <li class="social">
-                  <img src="./img/twit.svg" alt="Twitter" /><a
-                    href=""
-                    class="links"
-                  ></a>
+                  <svg class="soc">
+                    <use href="./img/sprite.svg#icon-twit"></use>
+                  </svg><a href=""></a>
                 </li>
                 <li class="social">
-                  <img src="./img/facebook1.svg" alt="Faceboock" /><a
-                    href=""
-                    class="links"
-                  ></a>
+                  <svg class="soc">
+                    <use href="./img/sprite.svg#icon-facebook1"></use>
+                  </svg><a href=""></a>
                 </li>
                 <li class="social">
-                  <img src="./img/linkedin1.svg" alt="Linken ID" /><a
-                    href=""
-                    class="links"
-                  ></a>
+                  <svg class="soc">
+                    <use href="./img/sprite.svg#icon-linkedin1"></use>
+                  </svg><a href=""></a>
                 </li>
               </ul>
             </li>
@@ -217,28 +217,24 @@
 
               <ul class="nav-lin">
                 <li class="social">
-                  <img src="./img/instagram2.svg" alt="Instagram" /><a
-                    href=""
-                    class="links"
-                  ></a>
+                  <svg class="soc">
+                    <use href="./img/sprite.svg#icon-instagram2"></use>
+                  </svg><a href=""></a>
                 </li>
                 <li class="social">
-                  <img src="./img/twit.svg" alt="Twitter" /><a
-                    href=""
-                    class="links"
-                  ></a>
+                  <svg class="soc">
+                    <use href="./img/sprite.svg#icon-twit"></use>
+                  </svg><a href=""></a>
                 </li>
                 <li class="social">
-                  <img src="./img/facebook1.svg" alt="Faceboock" /><a
-                    href=""
-                    class="links"
-                  ></a>
+                  <svg class="soc">
+                    <use href="./img/sprite.svg#icon-facebook1"></use>
+                  </svg><a href=""></a>
                 </li>
                 <li class="social">
-                  <img src="./img/linkedin1.svg" alt="Linken ID" /><a
-                    href=""
-                    class="links"
-                  ></a>
+                  <svg class="soc">
+                    <use href="./img/sprite.svg#icon-linkedin1"></use>
+                  </svg><a href=""></a>
                 </li>
               </ul>
             </li>
@@ -249,35 +245,47 @@
    
 
     <section class="container">
-      <div class="box">
-        <h3 class="garant">Постоянные клиенты</h3>
+      <div class="">
+        <h2 class="garant">Постоянные клиенты</h2>
         <ul class="line-blok">
           <li class="client">
-            <img class="cent" src="./img/logo1.svg" alt="" />
-          </li>
-          <li class="client">
-            <img class="cent" src="./img/logo2.svg" alt="" />
-          </li>
-          <li class="client">
-            <img class="cent" src="./img/logo3.svg" alt="" />
-          </li>
-          <li class="client">
-            <img class="cent" src="./img/logo4.svg" alt="" />
-          </li>
-          <li class="client">
-            <img class="cent" src="./img/logo5.svg" alt="" />
-          </li>
-          <li class="client">
-            <img class="cent" src="./img/logo6.svg" alt="" />
-          </li>
+            <svg class="cent ho">
+              <use href="./img/sprite.svg#icon-logo1"></use>
+            </svg>
+           </li>
+           <li class="client">
+            <svg class="cent ho">
+              <use href="./img/sprite.svg#icon-logo2"></use>
+            </svg>
+           </li>
+           <li class="client">
+            <svg class="cent ho">
+              <use href="./img/sprite.svg#icon-logo3"></use>
+            </svg>
+           </li>
+           <li class="client">
+            <svg class="cent ho">
+              <use href="./img/sprite.svg#icon-logo4"></use>
+            </svg>
+           </li>
+           <li class="client">
+            <svg class="cent ho">
+              <use href="./img/sprite.svg#icon-logo5"></use>
+            </svg>
+           </li>
+           <li class="client">
+            <svg class="cent ho">
+              <use href="./img/sprite.svg#icon-logo6"></use>
+            </svg>
+           </li>
         </ul>
       </div>
     </section>
-
+  </main>
     <footer>
       <div class="foot">
         <div class="one">
-          <a href="" class="logo-link"
+          <a href="" class="logo-lnk"
             ><span class="web">Web</span> <span class="stud">Studio</span></a
           >
            <div>
@@ -287,37 +295,33 @@
            </div>
         </div>
         <div class="one">
-          <h3 class="down">ПРИМОЕДИНЯЙТЕСЬ</h3>
+          <h3 class="down vel">присоединяйтесь</h3>
           <ul class="nav-lin">
-            <li class="social">
-              <img src="./img/instagram2.svg" alt="Instagram" /><a
-                href=""
-                class="links"
-              ></a>
+            <li class="socia">
+              <svg class="soc">
+                <use href="./img/sprite.svg#icon-instagram2"></use>
+              </svg><a href=""></a>
             </li>
-            <li class="social">
-              <img src="./img/twit.svg" alt="Twitter" /><a
-                href=""
-                class="links"
-              ></a>
+            <li class="socia">
+              <svg class="soc">
+                <use href="./img/sprite.svg#icon-twit"></use>
+              </svg><a href=""></a>
             </li>
-            <li class="social">
-              <img src="./img/facebook1.svg" alt="Faceboock" /><a
-                href=""
-                class="links"
-              ></a>
+            <li class="socia">
+              <svg class="soc">
+                <use href="./img/sprite.svg#icon-facebook1"></use>
+              </svg><a href=""></a>
             </li>
-            <li class="social">
-              <img src="./img/linkedin1.svg" alt="Linken ID" /><a
-                href=""
-                class="links"
-              ></a>
+            <li class="socia">
+              <svg class="soc">
+                <use href="./img/sprite.svg#icon-linkedin1"></use>
+              </svg><a href=""></a>
             </li>
           </ul>
         </div>
         <div class="two">
-          <h4 class="down">ПОДПИШИСЬ НА РАССЫЛКУ</h4>
-          <h4 class="buti">Подписаться</h4>
+          <h4 class="down left">Подпишитесь на рассылку</h4>
+          <h4 class="fly">Подписаться</h4>
         </div>
       </div>
       <p class="stu">2020 | Developed by GoIT Students</p>
